<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.souvik.asteroidrader.model.ApiResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConatiner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/ivAsteroid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/dangerous_asteroid"
            android:contentDescription="@string/asteroid_type_image" />

        <TextView
            android:id="@+id/tvHazardData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/potentially_hazard"
            android:textColor="@{data.potentiallyHazard ? @color/red :  @color/white}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivAsteroid" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAsteroid"
            android:text="@string/close_approach_date" />

        <TextView
            android:id="@+id/tvDateData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            android:text="@{data.date}" />

        <TextView
            android:id="@+id/tvAbsoluteMagnitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateData"
            android:text="@string/absolute_magnitude" />

        <TextView
            android:id="@+id/tvAbsoluteMagnitudeData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAbsoluteMagnitude"
            android:text="@{data.absoluteMagnitude}" />

        <ImageView
            android:id="@+id/ivHelp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/tvAbsoluteMagnitude"
            app:layout_constraintBottom_toBottomOf="@id/tvAbsoluteMagnitudeData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:src="@drawable/ic_question"
            android:contentDescription="@string/help_icon"/>

        <TextView
            android:id="@+id/tvEstimatedDiameterMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAbsoluteMagnitudeData"
            android:text="Estimated Diameter Max" />

        <TextView
            android:id="@+id/tvEstimatedDiameterMaxData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEstimatedDiameterMax"
            android:text="@{data.estimatedDiameterMax}" />

        <TextView
            android:id="@+id/tvRelativeVelocity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEstimatedDiameterMaxData"
            android:text="Relative Velocity" />

        <TextView
            android:id="@+id/tvRelativeVelocityData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRelativeVelocity"
            android:text="@{data.relativeVelocity}" />

        <TextView
            android:id="@+id/tvMissDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRelativeVelocityData"
            android:text="Miss Distance" />

        <TextView
            android:id="@+id/tvMissDistanceData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMissDistance"
            android:text="@{data.missDistance}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>